# btcusdt-structure-trading

./: .gitignore  ACTIVE_STRATEGY.md  README.md  analyze_channel_e.py  analyze_channel_f.py  analyze_phase8_aggressive.py  channel_full_detail.py  channel_pattern_match.py  deploy_lightsail.sh  fetch_channel_data.py  pyproject.toml  quantify_bear.py  report_trades.py  run_backtest_report.py  run_bb_deep_sweep.py  run_compound_backtest.py  run_final_candidates.py  run_full_report_zh.py  run_live_d.py  run_paper.py  run_paper_d.py  run_paper_diag.py  run_phase10_final_lock.py  run_phase12_paper_30day.py  run_phase8_aggressive_search.py  run_phase8c_exec_layer.py  run_phase8d_coinglass_overlay.py  run_report_b4x.py  run_swing_backtest.py  session_20260411_handoff.md  session_20260412_handoff.md  session_20260413_handoff.md  strategy_c_v2_FINAL.md  strategy_c_v2_PHASE11_DEPLOYMENT.md  strategy_c_v2_PHASE13_5_DEPLOYMENT.md  strategy_c_v2_PHASE13_6_STOP_CORRECTION.md  strategy_c_v2_phase8_aggressive_final.md  strategy_c_v2_phase8_canonical_baseline.md  strategy_c_v2_phase8_final.md  strategy_c_v2_plan.md  (+1 more)
.claude/: launch.json  settings.local.json
scripts/: compare_strategies.py
tests/: test_backtest.py  test_bb_ema.py  test_binance_futures.py  test_channel_detection.py  test_channel_swing.py  test_coinglass_backfill.py  test_coinglass_client.py  test_context_aware_validation.py  test_futures_data.py  test_indicators_atr.py  test_indicators_bollinger.py  test_indicators_stochastic.py  test_live_context.py  test_live_engine.py  test_live_paper.py  test_live_service_fixes.py  (+28 more)
(+215 files in other folders)
